# wrath

./: LICENSE  README.md  pyproject.toml
tests/: test_wrath.py
wrath/: __main__.py  bpf.py  cli.py  core.py  net.py  util.py
